# tauri_demo

./: myapp.key  myapp.key.pub  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: HelloWorld.vue
