[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
warp = "0.3"
which = "4.2.2"
anyhow = "1.0"
dirs = "4.0.0"
open = "2.1.1"
log = "0.4.14"
dunce = "1.0.2"
log4rs = "1.0.0"
nanoid = "0.4.0"
chrono = "0.4.19"
serde_yaml = "0.8"
auto-launch = "0.2"
port_scanner = "0.1.5"
delay_timer = "0.11.1"
parking_lot = "0.12.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["api-all", "devtools", "updater"] }
window-shadows = { version = "0.1" }
window-vibrancy = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(windows)'.dependencies]
runas = "0.2.1"
deelevate = "0.2.0"
winreg = { version = "0.10", features = ["transactions"] }
windows-sys = { version = "0.36", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
verge-dev = []
debug-yml = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
